--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,32 @@
+alembic==1.6.5
 asgiref==3.3.4
+autoenv==1.0.0
 click==8.0.1
 dj-database-url==0.5.0
 Django==3.2.3
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
 Flask==2.0.1
+Flask-Migrate==3.0.1
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jsonpickle==2.0.0
+jsons==1.4.2
+Mako==1.1.4
 MarkupSafe==2.0.1
 psycopg2-binary==2.8.6
+python-dateutil==2.8.1
+python-dotenv==0.17.1
+python-editor==1.0.4
 pytz==2021.1
+six==1.16.0
 SQLAlchemy==1.4.17
+SQLAlchemy-serializer==1.4.1
 sqlparse==0.4.1
+typish==1.9.2
 Werkzeug==2.0.1
 whitenoise==5.2.0
