--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.2.3
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
 Flask==2.0.1
+Flask-Cors==3.0.10
 Flask-Migrate==3.0.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
